--- a/BloodDonor/ProfileDescriptionViewController.xib
+++ b/BloodDonor/ProfileDescriptionViewController.xib
@@ -3,12 +3,12 @@
 	<data>
 		<int key="IBDocument.SystemTarget">1536</int>
 		<string key="IBDocument.SystemVersion">11G63</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2844</string>
 		<string key="IBDocument.AppKitVersion">1138.51</string>
 		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1926</string>
+			<string key="NS.object.0">1930</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
@@ -35,7 +35,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="191373211">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="634608078">
@@ -391,14 +391,14 @@
 							<object class="IBUIButton" id="965141522">
 								<reference key="NSNextResponder" ref="54862752"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{64, 144}, {192, 38}}</string>
+								<string key="NSFrame">{{64, 124}, {192, 38}}</string>
 								<reference key="NSSuperview" ref="54862752"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
-								<object class="NSColor" key="IBUIHighlightedTitleColor">
+								<object class="NSColor" key="IBUIHighlightedTitleColor" id="341337496">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
 								</object>
@@ -418,8 +418,29 @@
 								<reference key="IBUIFontDescription" ref="547634097"/>
 								<reference key="IBUIFont" ref="470573871"/>
 							</object>
+							<object class="IBUIButton" id="185921369">
+								<reference key="NSNextResponder" ref="54862752"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{64, 170}, {192, 44}}</string>
+								<reference key="NSSuperview" ref="54862752"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<int key="IBUIContentHorizontalAlignment">0</int>
+								<int key="IBUIContentVerticalAlignment">0</int>
+								<int key="IBUIButtonType">1</int>
+								<string key="IBUINormalTitle">Привязать к Facebook</string>
+								<reference key="IBUIHighlightedTitleColor" ref="341337496"/>
+								<object class="NSColor" key="IBUINormalTitleColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+								</object>
+								<reference key="IBUINormalTitleShadowColor" ref="374955886"/>
+								<reference key="IBUIFontDescription" ref="547634097"/>
+								<reference key="IBUIFont" ref="470573871"/>
+							</object>
 						</array>
-						<string key="NSFrame">{{0, 151}, {320, 213}}</string>
+						<string key="NSFrame">{{0, 151}, {320, 233}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSNextKeyView" ref="478058687"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -428,6 +449,7 @@
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 44}, {320, 436}}</string>
+				<reference key="NSSuperview"/>
 				<reference key="NSNextKeyView" ref="634608078"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -501,6 +523,14 @@
 					<int key="connectionID">61</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">linkUnlinkToFacebookButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="185921369"/>
+					</object>
+					<int key="connectionID">65</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">logoutButtonClick:</string>
 						<reference key="source" ref="965141522"/>
@@ -534,6 +564,15 @@
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">62</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">linkUnlinkToFacebook:</string>
+						<reference key="source" ref="185921369"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">67</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -618,8 +657,9 @@
 							<reference ref="478058687"/>
 							<reference ref="545273352"/>
 							<reference ref="919419536"/>
-							<reference ref="965141522"/>
 							<reference ref="374459136"/>
+							<reference ref="965141522"/>
+							<reference ref="185921369"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -678,6 +718,11 @@
 						<reference key="object" ref="978515632"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">64</int>
+						<reference key="object" ref="185921369"/>
+						<reference key="parent" ref="54862752"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -706,6 +751,7 @@
 				<real value="3" key="30.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="60.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="64.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<real value="1" key="8.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 			</dictionary>
@@ -713,7 +759,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">63</int>
+			<int key="maxID">67</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
@@ -730,6 +776,6 @@
 			<string key="exitButtonNormal.png">{192, 38}</string>
 			<string key="exitButtonPressed.png">{192, 38}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1926</string>
+		<string key="IBCocoaTouchPluginVersion">1930</string>
 	</data>
 </archive>
