--- a/BloodDonor/HSLoginChoiceViewController.xib
+++ b/BloodDonor/HSLoginChoiceViewController.xib
@@ -34,7 +34,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="718683247">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="88321318">
@@ -42,6 +42,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="718683247"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="621904952"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -56,6 +57,7 @@
 						<int key="NSvFlags">290</int>
 						<string key="NSFrame">{{90, 219}, {140, 23}}</string>
 						<reference key="NSSuperview" ref="718683247"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="862324688"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -84,8 +86,9 @@
 					<object class="IBUIButton" id="621904952">
 						<reference key="NSNextResponder" ref="718683247"/>
 						<int key="NSvFlags">290</int>
-						<string key="NSFrame">{{40, 147}, {240, 44}}</string>
+						<string key="NSFrame">{{40, 147}, {240, 40}}</string>
 						<reference key="NSSuperview" ref="718683247"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="118802990"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -112,8 +115,9 @@
 					<object class="IBUIButton" id="862324688">
 						<reference key="NSNextResponder" ref="718683247"/>
 						<int key="NSvFlags">290</int>
-						<string key="NSFrame">{{40, 250}, {240, 44}}</string>
+						<string key="NSFrame">{{40, 250}, {240, 40}}</string>
 						<reference key="NSSuperview" ref="718683247"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="335704825"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -134,8 +138,10 @@
 					<object class="IBUIButton" id="335704825">
 						<reference key="NSNextResponder" ref="718683247"/>
 						<int key="NSvFlags">290</int>
-						<string key="NSFrame">{{40, 301}, {240, 44}}</string>
+						<string key="NSFrame">{{40, 298}, {240, 40}}</string>
 						<reference key="NSSuperview" ref="718683247"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -157,6 +163,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{64, -3}, {193, 193}}</string>
 						<reference key="NSSuperview" ref="718683247"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1032388398"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUIContentMode">2</int>
@@ -169,6 +176,8 @@
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 44}, {320, 392}}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="88321318"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -270,11 +279,11 @@
 						<reference key="object" ref="718683247"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="88321318"/>
-							<reference ref="862324688"/>
 							<reference ref="1032388398"/>
 							<reference ref="621904952"/>
-							<reference ref="335704825"/>
 							<reference ref="118802990"/>
+							<reference ref="335704825"/>
+							<reference ref="862324688"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -335,13 +344,13 @@
 					<string key="className">HSLoginChoiceViewController</string>
 					<string key="superclassName">HSLoginViewController</string>
 					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="basicAuthenticationSelected:">id</string>
+						<string key="baseAuthorizationSelected:">id</string>
 						<string key="facebookAuthenticationSelected:">id</string>
 						<string key="registrationSelected:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="basicAuthenticationSelected:">
-							<string key="name">basicAuthenticationSelected:</string>
+						<object class="IBActionInfo" key="baseAuthorizationSelected:">
+							<string key="name">baseAuthorizationSelected:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="facebookAuthenticationSelected:">
